--- a/notebooks/github_hw1.ipynb
+++ b/notebooks/github_hw1.ipynb
@@ -50,7 +50,7 @@
       ],
       "metadata": {
         "id": "roux64fhObD_",
-        "outputId": "c6ccc442-0d88-4d39-f1ce-e243b1b214ef",
+        "outputId": "5e14bee6-02e4-4b84-d3b8-a3ee24787da3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -61,7 +61,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'cvr_course' already exists and is not an empty directory.\n"
+            "Cloning into 'cvr_course'...\n",
+            "remote: Enumerating objects: 518, done.\u001b[K\n",
+            "remote: Counting objects: 100% (27/27), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Total 518 (delta 8), reused 15 (delta 6), pack-reused 491\u001b[K\n",
+            "Receiving objects: 100% (518/518), 60.36 MiB | 30.57 MiB/s, done.\n",
+            "Resolving deltas: 100% (115/115), done.\n"
           ]
         }
       ]
@@ -73,12 +79,12 @@
       ],
       "metadata": {
         "id": "Ba7KB98xOhaW",
-        "outputId": "a703bf37-e067-4a9e-afa9-8c086c44fd44",
+        "outputId": "82a7f237-1e16-4036-baa3-367f7afdaf74",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,31 +104,19 @@
       "metadata": {
         "id": "531ObRsCRxP8"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!git remote add origin-psk https://Fatkullin-TM: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@github.com/Fatkullin-TM/cvr_course.git"
+        "!git remote add origin-psk https://Fatkullin-TM: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@github.com/Fatkullin-TM/cvr_course.git"
       ],
       "metadata": {
-        "id": "8OgW4k5wUBi3",
-        "outputId": "6c62155a-3f58-4a10-b92b-3e95564f7f59",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "8OgW4k5wUBi3"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -131,12 +125,12 @@
       ],
       "metadata": {
         "id": "59xS6VN3PP66",
-        "outputId": "436e48b0-0467-411e-c937-404adff8fb8b",
+        "outputId": "e26d1008-54a7-478f-e82a-91b6b6786cfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,12 +152,12 @@
       ],
       "metadata": {
         "id": "a_Wce6cUPm4d",
-        "outputId": "9e8fd478-20da-4704-da56-39c7ffca7c12",
+        "outputId": "01c42cc8-248e-4b16-93e5-9b0202f58dc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,33 +171,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo 'test line' >> README.md\n",
-        "!cat README.md"
+        "!echo 'test line' >> README.md"
       ],
       "metadata": {
-        "id": "CpZrFTRfP0C2",
-        "outputId": "c1637b2c-6556-42fc-eaf3-25e990c0c6d6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CpZrFTRfP0C2"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "# Computer Vision in Robotics\n",
-            "\n",
-            "<img src=\"./.img/logo_for_form.png\" height=\"350\" />\n",
-            "\n",
-            "\n",
-            "Visit our site <https://www.starkitrobots.com/cvr> to check content.\n",
-            "Course is online and will be carried out on our *[YouTube chanel](https://www.youtube.com/channel/UC0QPJgfg17wCqf4-hG_A5OA)*.\n",
-            "test line\n"
-          ]
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -212,12 +186,12 @@
       ],
       "metadata": {
         "id": "EfO_zN7xP0Uq",
-        "outputId": "9f506a22-0175-4b82-cb55-2900afbef955",
+        "outputId": "ef9c183f-5d3d-470a-8e23-9f8970bfbd61",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,23 +212,33 @@
     {
       "cell_type": "code",
       "source": [
-        "!git add *\n",
+        "!git add README.md"
+      ],
+      "metadata": {
+        "id": "3CxPJF7LP0g8"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!git commit -m \"update README.md\""
       ],
       "metadata": {
-        "id": "3CxPJF7LP0g8",
-        "outputId": "48bc70b0-3745-4d54-e1e2-cdec7afd01be",
+        "id": "PbYEEkx0iP-z",
+        "outputId": "69b22f4c-a326-414c-ff83-bb8d275c9dc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[update_readme 779081a] update README.md\n",
+            "[update_readme da4a6ff] update README.md\n",
             " 1 file changed, 1 insertion(+)\n"
           ]
         }
@@ -266,13 +250,13 @@
         "!git status"
       ],
       "metadata": {
-        "id": "PPOMbt4vRekg",
-        "outputId": "0b5ab025-3805-4acf-9158-08e53bd15889",
+        "id": "_WHKVTqomzxy",
+        "outputId": "eeb8c0cc-593a-4143-913b-dc25e6a14f86",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,30 +274,25 @@
         "!git push origin-psk update_readme"
       ],
       "metadata": {
-        "id": "MSoT-5uoR7Z2",
-        "outputId": "8e691b8e-3664-4828-d063-4958f27566a8",
+        "id": "uRHTMen1gdRW",
+        "outputId": "3baa92aa-54ad-4e02-906d-69a546743295",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Counting objects: 3, done.\n",
-            "Delta compression using up to 2 threads.\n",
-            "Compressing objects:  33% (1/3)   \rCompressing objects:  66% (2/3)   \rCompressing objects: 100% (3/3)   \rCompressing objects: 100% (3/3), done.\n",
-            "Writing objects:  33% (1/3)   \rWriting objects:  66% (2/3)   \rWriting objects: 100% (3/3)   \rWriting objects: 100% (3/3), 313 bytes | 313.00 KiB/s, done.\n",
-            "Total 3 (delta 2), reused 0 (delta 0)\n",
-            "remote: Resolving deltas:   0% (0/2)\u001b[K\rremote: Resolving deltas:  50% (1/2)\u001b[K\rremote: Resolving deltas: 100% (2/2)\u001b[K\rremote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-            "remote: \n",
-            "remote: Create a pull request for 'update_readme' on GitHub by visiting:\u001b[K\n",
-            "remote:      https://github.com/Fatkullin-TM/cvr_course/pull/new/update_readme\u001b[K\n",
-            "remote: \n",
             "To https://github.com/Fatkullin-TM/cvr_course.git\n",
-            " * [new branch]      update_readme -> update_readme\n"
+            " ! [rejected]        update_readme -> update_readme (non-fast-forward)\n",
+            "error: failed to push some refs to 'https://Fatkullin-TM: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@github.com/Fatkullin-TM/cvr_course.git'\n",
+            "hint: Updates were rejected because the tip of your current branch is behind\n",
+            "hint: its remote counterpart. Integrate the remote changes (e.g.\n",
+            "hint: 'git pull ...') before pushing again.\n",
+            "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\n"
           ]
         }
       ]
@@ -321,146 +300,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!git status"
+        ""
       ],
       "metadata": {
-        "id": "RuiVeeB1SYFq",
-        "outputId": "ac4f1b6e-b6a7-4e0d-8818-0b28330b2041",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9w6nOBsFnCGB"
       },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "On branch update_readme\n",
-            "nothing to commit, working tree clean\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git checkout develop"
-      ],
-      "metadata": {
-        "id": "Pz23fxbWU4sx",
-        "outputId": "13096817-d356-4094-d3a7-d26d22950f1d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Branch 'develop' set up to track remote branch 'develop' from 'origin'.\n",
-            "Switched to a new branch 'develop'\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git pull origin-psk develop"
-      ],
-      "metadata": {
-        "id": "56A-mEBXVoTP",
-        "outputId": "da15f3f6-be05-49ff-9fd3-93a6f36099bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "From https://github.com/Fatkullin-TM/cvr_course\n",
-            " * branch            develop    -> FETCH_HEAD\n",
-            " * [new branch]      develop    -> origin-psk/develop\n",
-            "Already up to date.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git log --oneline --graph"
-      ],
-      "metadata": {
-        "id": "_-JbXY0rVFmG",
-        "outputId": "e170f06a-a8c2-440d-f8c6-a78c8e82efb9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "* \u001b[33m85a8f0a\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mdevelop\u001b[m\u001b[33m, \u001b[m\u001b[1;31morigin/develop\u001b[m\u001b[33m)\u001b[m Added 3 seminar and data\n",
-            "* \u001b[33md3444e1\u001b[m Updating ball img for hw\n",
-            "*   \u001b[33m23ad050\u001b[m Merge branch 'develop' of https://github.com/StarkitRobots/cvr_course into develop\n",
-            "\u001b[32m|\u001b[m\u001b[33m\\\u001b[m  \n",
-            "\u001b[32m|\u001b[m *   \u001b[33m00528b8\u001b[m Merge branch 'main' into develop\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m\u001b[35m\\\u001b[m  \n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m * \u001b[33m6d117b3\u001b[m Fixed README misprint\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m * \u001b[33m6be2222\u001b[m Added grades for each task\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m * \u001b[33m7baa281\u001b[m Fixed README.md\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m *   \u001b[33ma75ebbb\u001b[m Merge branch 'main' of github.com:StarkitRobots/cvr_course into main\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m \u001b[36m|\u001b[m\u001b[1;31m\\\u001b[m  \n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m \u001b[36m|\u001b[m *   \u001b[33mbd1f9a5\u001b[m Merge pull request #4 from StarkitRobots/develop\n",
-            "\u001b[32m|\u001b[m \u001b[34m|\u001b[m \u001b[36m|\u001b[m \u001b[1;32m|\u001b[m\u001b[1;33m\\\u001b[m  \n",
-            "* \u001b[34m|\u001b[m \u001b[36m|\u001b[m \u001b[1;32m|\u001b[m \u001b[1;33m|\u001b[m \u001b[33ma3801f9\u001b[m Added second hw\n",
-            "\u001b[34m|\u001b[m\u001b[34m/\u001b[m \u001b[36m/\u001b[m \u001b[1;32m/\u001b[m \u001b[1;33m/\u001b[m  \n",
-            "* \u001b[36m|\u001b[m \u001b[1;32m|\u001b[m \u001b[1;33m|\u001b[m \u001b[33m5020137\u001b[m Refactored cv2_sem2\n",
-            "* \u001b[36m|\u001b[m \u001b[1;32m|\u001b[m \u001b[1;33m|\u001b[m \u001b[33m0623348\u001b[m Added draft of sem2 and data for it\n",
-            "\u001b[36m|\u001b[m\u001b[36m/\u001b[m \u001b[1;32m/\u001b[m \u001b[1;33m/\u001b[m  \n",
-            "* \u001b[1;32m|\u001b[m \u001b[1;33m|\u001b[m   \u001b[33ma51ca1d\u001b[m Merge branch 'develop' of github.com:StarkitRobots/cvr_course into develop\n",
-            "\u001b[1;34m|\u001b[m\u001b[1;33m\\\u001b[m \u001b[1;32m\\\u001b[m \u001b[1;33m\\\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[1;33m|\u001b[m \u001b[1;32m|\u001b[m\u001b[1;33m/\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[1;33m|\u001b[m\u001b[1;33m/\u001b[m\u001b[1;32m|\u001b[m   \n",
-            "\u001b[1;34m|\u001b[m * \u001b[1;32m|\u001b[m   \u001b[33m662c7a1\u001b[m Merge pull request #3 from ar0usel/develop\n",
-            "\u001b[1;34m|\u001b[m \u001b[1;36m|\u001b[m\u001b[31m\\\u001b[m \u001b[1;32m\\\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[1;36m|\u001b[m * \u001b[1;32m|\u001b[m \u001b[33m69871ae\u001b[m Added all sem. code. Created using Colaboratory.\n",
-            "\u001b[1;34m|\u001b[m * \u001b[31m|\u001b[m \u001b[1;32m|\u001b[m   \u001b[33mded3ac3\u001b[m Merge pull request #2 from ar0usel/develop\n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m\u001b[31m\\\u001b[m \u001b[31m\\\u001b[m \u001b[1;32m\\\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m \u001b[31m|\u001b[m\u001b[31m/\u001b[m \u001b[1;32m/\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m * \u001b[1;32m|\u001b[m   \u001b[33m1aaf855\u001b[m Merge pull request #1 from ar0usel/test\n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m \u001b[32m|\u001b[m\u001b[35m\\\u001b[m \u001b[1;32m\\\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m\u001b[32m/\u001b[m \u001b[35m/\u001b[m \u001b[1;32m/\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m * \u001b[1;32m|\u001b[m \u001b[33ma997329\u001b[m Update README.md\n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m * \u001b[1;32m|\u001b[m \u001b[33m4fc1d29\u001b[m Update README.md\n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m \u001b[1;32m|\u001b[m\u001b[1;32m/\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m *   \u001b[33mc4fcecc\u001b[m Merge pull request #1 from StarkitRobots/develop\n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m \u001b[36m|\u001b[m\u001b[32m\\\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m \u001b[36m|\u001b[m\u001b[32m/\u001b[m  \n",
-            "\u001b[1;34m|\u001b[m \u001b[32m|\u001b[m\u001b[32m/\u001b[m\u001b[36m|\u001b[m   \n",
-            "* \u001b[32m|\u001b[m \u001b[36m|\u001b[m \u001b[33maa8c4d4\u001b[m Added git homework\n",
-            "\u001b[32m|\u001b[m\u001b[32m/\u001b[m \u001b[36m/\u001b[m  \n",
-            "* \u001b[36m|\u001b[m \u001b[33m6c4330d\u001b[m Clean code before 1 sem\n",
-            "* \u001b[36m|\u001b[m \u001b[33mffe4ee9\u001b[m Added colab notebooks\n",
-            "* \u001b[36m|\u001b[m \u001b[33m7c12acc\u001b[m Added draft of the first sem\n",
-            "\u001b[36m|\u001b[m\u001b[36m/\u001b[m  \n",
-            "* \u001b[33m74e20f9\u001b[m Update README.md\n",
-            "* \u001b[33mbe6fcb9\u001b[m Update README.md\n",
-            "* \u001b[33m536bc3b\u001b[m Update README\n",
-            "* \u001b[33m50bf2b2\u001b[m first commit\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
